added redis configuration

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,15 +1,32 @@
 spring.application.name=product-service
 # DataSource Configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/borkar
+spring.datasource.url=jdbc:h2:mem:product_db
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/borkar?useSSL=false&serverTimezone=UTC
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 
+# H2 Console (Accessible at http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # Hibernate/JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Disable schema validation (optional)
+spring.jpa.defer-datasource-initialization=true
+
+
+logging.level.org.springframework.cache=DEBUG
+
+#redis configuration
+
+# Redis server details
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# Optional cache settings
+spring.cache.type=redis
+spring.redis.timeout=60000
