--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.redis.port=6379
 # Optional cache settings
 spring.cache.type=redis
 spring.redis.timeout=60000
+
+
+# JWT
+app.jwt.secret=secretkey123456
+app.jwt.expiration=3600000
